AWS Services section added

--- a/cv_4.tex
+++ b/cv_4.tex
@@ -22,6 +22,7 @@
  
 \documentclass{resume} % Use the custom resume.cls style 
 \usepackage{hyperref}
+\usepackage[T1]{fontenc}
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
@@ -45,7 +46,7 @@
 \name{ \href{http://www.abhinitmz.tk/}{ABHISHEK}  SHARMA} % Your name 
 \address{Boys Hostel-3, NIT Mizoram, Aizawl, Mizoram, 796025} % Your address 
 %\address{123 Pleasant Lane \\ City, State 12345} % Your secondary addess (optional) 
-\address{+91 7727935180  \\  5h1dabhi@gmail.com \\ \href{https://github.com/geekabhi007}{Github} \\  \href{https://www.linkedin.com/in/abhishek-sharma-60b456123/}{LinkedIn}  }                        
+\address{+91 7005693645  \\  5h1dabhi@gmail.com \\   Github://\href{https://github.com/abhi1d}{abhi1d}  \\  LinkedIn://\href{https://www.linkedin.com/in/abhi1d/}{abhi1d}  }                        
 
 \begin{document}  
 
@@ -76,14 +77,18 @@ Vikas Vidhya Ashram Sr. Sec. School, Jaipur, Rajasthan, 79.83\%
 %	TECHNICAL STRENGTHS SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{skills and INTERESTS}
+\begin{rSection}{skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }  
-Programing Languages  :&\textit{Over 5000 lines} - Java, JSP, Servlet\\
-                       &\textit{Over 1000 lines} - C, C++,Python, JavaScript, HTML,Bootstrap-3\\
-                       &\textit{Familiar} - \LaTeX, CSS, JSON, AJAX, Markdown, JQuery, Mysql, Firebase\\
-Tools/Frameworks  :&  Android Studio, Git, VS Code, Firebase, Apache, Tomcat, DOM Parser, Eclipse\\ 
-                   &  Web Scraping, Spring Framework, FileZilla, JDBC etc.
+Programming Languages  :&\textit{Proficient} - Java, JSP(Java Server Pages), C\\
+                       &\textit{Intermediate} -  C++, Python, HTML, Bootstrap-3\\
+                       
+                       &\textit{Familiar} - \LaTeX, JavaScript, CSS, JSON, AJAX, Markdown, JQuery, Mysql,\\
+                       & Firebase
+                       \\
+Tools/Frameworks  :&  Spring Framework, Android Studio, Git,IntelliJ IDEA, VS Code, Firebase,\\  
+                   &  Apache Tomcat, Web Scraping, FileZilla, JDBC, JDOM Parser, Eclipse \\
+                   &  Amazon Web Services(AWS), linux hosting - Cpanel etc.
                        
                         
                                 
@@ -99,9 +104,8 @@ Tools/Frameworks  :&  Android Studio, Git, VS Code, Firebase, Apache, Tomcat, DO
 \begin{rSection}{CourseWork}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }  
-Academics & Data Structure ,Design and analysis of Algorithm ,System programming,Theory of \\ 
-          & Computation, Linear algebra, Probability theory, Operating System,            DBMS.\\
-Online Course & Machine Learning by Andrew NG (Cousera). 
+Academics : & Data Structure ,Design and analysis of Algorithm ,System programming, Theory of \\ 
+          & Computation, Linear algebra, Probability theory, Operating System, DBMS, Software Engineering.\\
 
 \end{tabular}   
 
@@ -125,36 +129,54 @@ Online Course & Machine Learning by Andrew NG (Cousera).
 %	PROJECTS
 
 \begin{rSection}{PROJECTS}
-
-{\textbf{Attendance Manager  \href{https://github.com/geekabhi007/Attendance-Manager}{Github}}} \hfill August 2017 - November 2017{}{} 
+{\textbf{Capture The Flag | \href{https://github.com/abhi1d/capture-the-flag}{Github}}} \hfill April 2018{}{} 
 \begin{itemize}
-\item Creating a Dynamic Web application that will store college attendance of the user and create an alert when \\the attendance fall below 75\%.
+\item Built the online platform for capture the flag game. 
+\item It contains set of questions and all the questions have a unique flag to crack the questions.
+\item Some set of questions redirect to the web pages for the flag of the questions. 
+\item Dashboard section in the game has all the responses to the questions of each player and one player can see only his responses.
+\item Winners determined at the end of the CTF, the player that ends with the most points will be            declared the winner. In case of tie, the winner will be the one who solved the questions in least       time.
+\item \textbf{Tools :} IntelliJ IDEA, AWS Codestar, Spring-MVC Framework, JSP, Java, Apache Tomcat.
+\item \textbf{Services : }Amazon Web Services
+\end{itemize}
+
+%-----------------------------------------------------
+
+{\textbf{Attendance Manager | \href{https://github.com/abhi1d/Attendance-Manager}{Github}}} \hfill August 2017 - November 2017{}{} 
+\begin{itemize}
+\item Created a Dynamic web application for Managing student attendance using Java EE technology. 
+\item It stores the user information in Mysql database.
+\item It shows alert when the attendance falls below 75\%.
 \item \textbf{Tools :} Eclipse IDE, Java, JSP, JDBC, Mysql, Tomcat Server.
 \end{itemize}
 
 %------------------------------------------------
 
-{\textbf{Om Construction \href{https://github.com/geekabhi007/OmConstruction}{Github}}} \hfill May 2017 - June 2017{}{} 
+{\textbf{Om Construction | \href{https://github.com/abhi1d/OmConstruction}{Github}}} \hfill May 2017 - June 2017{}{} 
 \begin{itemize}
-\item It is organization mobile android application for Om Construction named company who was facing problem \\to organize of data.
+\item It is organization mobile android application for Om Construction named company who was facing problem to organize data.
 \item In this App, they can see updated details of any product and they can secure their data.
-\item \textbf{Tools :} Eclipse IDE, Java, JSP, JDBC, Mysql, Tomcat Server.
+\item Graphs are generated for all the products with respect to its value which can help to understand the sales of the product.
+\item \textbf{Tools :}  Java, Android Studio, Firebase, Maven Graph Library
 \end{itemize}
 
 %-------------------------------------------------
 
-{\textbf{Random Quote Generator \href{https://codepen.io/geekabhi007/pen/RgqBZX}{CodePen} }} \hfill July 2017{}{} 
+{\textbf{Random Quote Generator | \href{https://codepen.io/geekabhi007/pen/RgqBZX}{CodePen} }} \hfill July 2017{}{} 
 \begin{itemize}
 \item It is Web App where if anyone presses “Generate” button then every time new quotes will appear and \\accordingly UI changes will happen.
 \item We can tweet our new generated quotes. 
-\item \textbf{Tools :}  Html, CSS ,Bootstrap-3, QuotesOnDesign API,Twitter API, JavaScript, Jquery, Ajax. 
+\item \textbf{Tools :}  Html, CSS ,Bootstrap v3, QuotesOnDesign API, Twitter API, JavaScript, Jquery, Ajax. 
 \end{itemize}
 
-\end{rSection} 
+ 
 
-  
+
 
 %--------------------------------------------------------------------------------------
+\end{rSection}  %End of the project section
+
+
 % Extra-Cirrucular
 %--------------------------------------------------------------------------------------
 
@@ -182,9 +204,5 @@ Online Course & Machine Learning by Andrew NG (Cousera).
 %  DECLARATION
 %--------------------------------------------------------------------------------
 
-\begin{rSection}{ Declaration  } \itemsep -3pt        
 
-\item I hereby declare that all the details furnished above are true to the best of my knowledge and belief.   
-  
-\end{rSection}
 \end{document}
